第二次上传

--- a/demo02.html
+++ b/demo02.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./demo02.css">
+    <script src="./demo02.js"></script>
 </head>
 <body>
-    <div class="box">
-        zhe shi sha a !
-    </div>
+    <div class="box">ze ze   aaw e !</div>
 </body>
 </html>
